--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2022 Git.Learning
-	Adding changes before rebasing conflicts
+	Some silly changes from master branch
 -->
 <head>
-	<title>A Very Respectful Website</title>
+	<title>Silly Changes on Master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,14 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk Filler Content -->
 		<p>
-			Some interesting stuff goes here
+			Just stuff for now,
+			Not sure if we should replace this or not
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git Learning 2022</p>
+		<p>&copy; Azim Azidin 2022</p>
 	</footer>
 </body>
 </html>
