--- a/simple.html
+++ b/simple.html
@@ -22,7 +22,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Azim Azidin 2022</p>
+		<p>&copy; 2022 Git.Learning, All rights reserved.</p>
 	</footer>
 </body>
 </html>
